Updating to hack-for-houston/hfhwebsite@35aa03cf8582feae66e1ff440262902dcdb3d4b5.

--- a/using-tags.html
+++ b/using-tags.html
@@ -113,7 +113,7 @@ into the {body} of the default.hbs template -->
             <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="/hfhwebsite/">Home</a></li>
     <li class="nav-getting-started" role="menuitem"><a href="/hfhwebsite/tag/projects/">Projects</a></li>
-    <li class="nav-signup" role="menuitem"><a href="https://www.signup-form-here.edu">Sign Up</a></li>
+    <li class="nav-signup" role="menuitem"><a href="https://goo.gl/forms/ZQUM4Q2W01OhJm4I2">Sign Up</a></li>
 </ul>
 
         
@@ -426,7 +426,6 @@ into the {body} of the default.hbs template -->
                     <a href="/hfhwebsite/">Latest Posts</a>
                     <a href="https://facebook.com/hackforhouston" target="_blank" rel="noopener">Facebook</a>
                     
-                    <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
                 </nav>
             </div>
         </footer>
